[metadata]
name = meltie-hunter
version = 0.0.1
description = A Reddit bot for finding GME_Meltdown shills
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AngrySilverback/meltie-hunter
author = AngrySilverback
author_email = 120227748+AngrySilverback@users.noreply.github.com
license = GPL3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    praw>=7.6.1
python_requires = >=3.7

[options.packages.find]

[options.entry_points]
console_scripts =
    meltie-hunter = mhbot.main:main
